project.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "3.66.0"
    }
  }
}

provider "aws" {
  region = var.region
}

resource "aws_vpc" "andrew_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "Andrew-example-vpc"
  }
}

resource "aws_internet_gateway" "gateway" {
  vpc_id = aws_vpc.andrew_vpc.id

  tags = {
    Name = "Andrew-example-internet-gateway"
  }
}

resource "aws_route" "andrew_route" {
  route_table_id         = aws_vpc.andrew_vpc.main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.gateway.id
}

resource "aws_subnet" "main" {
  count                   = length(data.aws_availability_zones.available.names)
  vpc_id                  = aws_vpc.andrew_vpc.id
  cidr_block              = "10.0.${count.index}.0/24"
  map_public_ip_on_launch = true
  availability_zone       = element(data.aws_availability_zones.available.names, count.index)

  tags = {
    Name = "public-${element(data.aws_availability_zones.available.names, count.index)}"
  }
}

resource "aws_security_group" "default" {
  name        = "terraform_security_group"
  description = "Terraform example security group"
  vpc_id      = aws_vpc.andrew_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.allowed_cidr_blocks
  }

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = var.allowed_cidr_blocks
  }

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.andrew_alb.id]
  }

  # Allow outbound internet access.
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Andrew-security-group"
  }
}


resource "aws_security_group" "andrew_alb" {
  name        = "terraform_alb_security_group"
  description = "Terraform load balancer security group"
  vpc_id      = aws_vpc.andrew_vpc.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = var.allowed_cidr_blocks
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.allowed_cidr_blocks
  }

  # Allow all outbound traffic.
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Andrew-alb-security-group"
  }
}

resource "aws_alb" "andrew_alb" {
  name            = "terraform-example-alb"
  security_groups = [aws_security_group.andrew_alb.id]
  subnets         = aws_subnet.main.*.id
  tags = {
    Name = "Andrew-alb"
  }
}

resource "aws_alb_target_group" "group" {
  name     = "terraform-example-alb-target"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.andrew_vpc.id
  stickiness {
    type = "lb_cookie"
  }
  health_check {
    path                = "/login"
    port                = "443"
    protocol            = "HTTPS"
    matcher             = "200"
    timeout             = 10    # Time in seconds to wait for a response
    interval            = 30    # Time in seconds between health checks
    healthy_threshold   = 3     # Number of consecutive successful health checks before considering an unhealthy target healthy
    unhealthy_threshold = 3     # Number of consecutive failed health checks before considering a healthy target unhealthy
  }
}


resource "aws_alb_listener" "listener_http" {
  load_balancer_arn = aws_alb.andrew_alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    target_group_arn = aws_alb_target_group.group.arn
    type             = "forward"
  }
}

resource "aws_alb_listener" "listener_https" {
  load_balancer_arn = aws_alb.andrew_alb.arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = var.certificate_arn
  default_action {
    target_group_arn = aws_alb_target_group.group.arn
    type             = "forward"
  }
}

resource "aws_route53_record" "terraform" {
  zone_id = data.aws_route53_zone.zone.zone_id
  name    = "terraform.${var.route53_hosted_zone_name}"
  type    = "A"
  alias {
    name                   = aws_alb.andrew_alb.dns_name
    zone_id                = aws_alb.andrew_alb.zone_id
    evaluate_target_health = true
  }
}
